# omnect-os-init

./: .gitignore  Cargo.toml  README.md  build.rs  config_plan.md  general_findings.md  pr5-findings.md  project-context.md
docs/superpowers/plans/: 2026-04-20-fix-general-findings.md  2026-04-20-improve-enum-handling.md
src/: build.rs  e2fsck.rs  early_init.rs  error.rs  finish.rs  lib.rs  main.rs  mount.rs  resizefs.rs  rootblk.rs  util.rs
src/bootloader/: grub.rs  mod.rs  types.rs  uboot.rs
src/config/: mod.rs
src/filesystem/: boot_sequence.rs  fsck.rs  mod.rs  mount.rs  overlayfs.rs
src/logging/: kmsg.rs  mod.rs
src/partition/: device.rs  layout.rs  mod.rs  symlinks.rs
src/runtime/: fs_link.rs  mod.rs  omnect_device_service.rs  switch_root.rs
tests/: device_detection.rs
