[package]
name = "omnect-os-init"
version = "0.1.0"
edition = "2021"
authors = ["omnect team"]
description = "Rust-based init process for omnect-os initramfs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omnect/omnect-os-init"

[lib]
name = "omnect_os_init"
path = "src/lib.rs"

[[bin]]
name = "omnect-os-init"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Mount operations (high-level API, RAII unmount)
sys-mount = "3.0"

# Syscalls (stat for device detection, symlink, etc.)
nix = { version = "0.29", features = ["fs", "mount"] }

# Logging
log = { version = "0.4", features = ["std"] }

# Base64 encoding/decoding for fsck status
base64 = "0.22"

# Compression for fsck status
flate2 = "1.0"

[features]
default = ["core"]
core = []
factory-reset = ["core"]
flash-mode-1 = ["factory-reset"]
flash-mode-2 = ["flash-mode-1"]
flash-mode-3 = ["flash-mode-1"]
resize-data = ["core"]
persistent-var-log = ["core"]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller panic handling

[dev-dependencies]
tempfile = "3.10"
