[package]
name = "omnect-os-init"
version = "0.1.0"
edition = "2024"
authors = ["omnect team"]
description = "Rust-based init process for omnect-os initramfs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omnect/omnect-os-init"

[lib]
name = "omnect_os_init"
path = "src/lib.rs"

[[bin]]
name = "omnect-os-init"
path = "src/main.rs"

[dependencies]
log = { version = "0.4", default-features = false, features = ["std"] }
nix = { version = "0.29", default-features = false, features = ["fs", "mount", "process", "reboot", "user"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false }

[features]
default = ["core"]
core = []
grub = ["core"]           # x86-64 EFI targets (GRUB bootloader)
uboot = ["core"]          # ARM targets (U-Boot bootloader)
factory-reset = ["core"]
flash-mode-1 = ["factory-reset"]
flash-mode-2 = ["flash-mode-1"]
flash-mode-3 = ["flash-mode-1"]
persistent-var-log = ["core"]
resize-data = ["core"]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Smaller panic handling

[dev-dependencies]
tempfile = { version = "3.20", default-features = false }
